Profile Image link corrected - 1

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <table>
       <tr>
-        <td><img src="C:\Users\MANIKANTA\OneDrive\Desktop\Web Development\HTML - Personal Site\Images\fake-human-circle-img.png" alt="Profile Picture"></td>
+        <td><img src="images\fake-human-circle-img.png" alt="Profile Picture"></td>
         <td><h1>Mani A</h1>
         <p><em>Full Stack Developer</em></p>
         <p>I am a full stack web developer with 2 years of experience. I love to create websites and I have learned full stck developement course in
