--- a/index.html
+++ b/index.html
@@ -79,6 +79,6 @@
         <td>⭐⭐⭐</td>
       </tr>
     </table>
-    <h3> <a href="C:\Users\MANIKANTA\OneDrive\Desktop\Web Development\HTML - Personal Site\contact-details.html">Contact Me</a> </h3>
+    <h3> <a href="contact-details.html">Contact Me</a> </h3>
   </body>
 </html>
