mail id change - 1

--- a/contact-details.html
+++ b/contact-details.html
@@ -10,7 +10,7 @@
       <li>Phone Number: 9603484284</li>
       <li>Mail ID: maniakkala7@gmail.com</li><br>
       <hr>
-      <form action="mailto:manimj129@gmail.com?subject=feedback" method="post" enctype="text/plain">
+      <form action="mailto:maniakkala7@gmail.com?subject=feedback" method="post" enctype="text/plain">
         <label>Your Name:</label>
         <input type="text" name="name" value=""><br>
         <label>Your Email:</label>
