--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <td><img src="Images/profile-photo-circle-mani-1.png" alt="Profile Picture"></td>
         <td><h1>Mani A</h1>
         <p><em>Full Stack Developer</em></p>
-        <p>I am a full stack web developer with 2 years of experience. I love to create websites and I have learned full stck developement course in
+        <p>I am a full stack web developer with 2 years of experience. I love to create websites and I have learned full stack developement course in
           <a href="https://www.udemy.com/course/the-complete-web-development-bootcamp/learn/lecture/12287450#overview"><strong>Udemy</strong></a>
         </p></td>
       </tr>
